--- a/spring-batch-docs/asciidoc/common-patterns.adoc
+++ b/spring-batch-docs/asciidoc/common-patterns.adoc
@@ -50,8 +50,10 @@ public class ItemFailureLoggerListener extends ItemListenerSupport {
 }
 ----
 
-Having implemented this listener, it must be registered with a step, as shown in the
-following example:
+Having implemented this listener, it must be registered with a step.
+
+[role="xmlContent"]
+The following example shows how to register a listener with a step in XML:
 
 .XML Configuration
 [source, xml, role="xmlContent"]
@@ -65,6 +67,9 @@ following example:
 </listeners>
 </step>
 ----
+
+[role="javaContent"]
+The following example shows how to register a listener with a step Java:
 
 .Java Configuration
 [source, java, role="javaContent"]
@@ -134,8 +139,10 @@ public class EarlyCompletionItemReader implements ItemReader<T> {
 The previous example actually relies on the fact that there is a default implementation
 of the `CompletionPolicy` strategy that signals a complete batch when the item to be
 processed is `null`. A more sophisticated completion policy could be implemented and
-injected into the `Step` through the `SimpleStepFactoryBean`, as shown in the following
-example:
+injected into the `Step` through the `SimpleStepFactoryBean`.
+
+[role="xmlContent"]
+The following example shows how to inject a completion policy into a step in XML:
 
 .XML Configuration
 [source, xml, role="xmlContent"]
@@ -149,6 +156,9 @@ example:
 
 <bean id="completionPolicy" class="org.example...SpecialCompletionPolicy"/>
 ----
+
+[role="javaContent"]
+The following example shows how to inject a completion policy into a step in Java:
 
 .Java Configuration
 [source, java, role="javaContent"]
@@ -196,12 +206,15 @@ so this is always an abnormal ending to a job.
 [[addingAFooterRecord]]
 ===  Adding a Footer Record
 
-Often, when writing to flat files, a "footer" record must be appended to the end of the
+Often, when writing to flat files, a "`footer`" record must be appended to the end of the
 file, after all processing has be completed. This can be achieved using the
 `FlatFileFooterCallback` interface provided by Spring Batch. The `FlatFileFooterCallback`
 (and its counterpart, the `FlatFileHeaderCallback`) are optional properties of the
-`FlatFileItemWriter` and can be added to an item writer as shown in the following
-example:
+`FlatFileItemWriter` and can be added to an item writer.
+
+[role="xmlContent"]
+The following example shows how to use the `FlatFileHeaderCallback` and the
+`FlatFileFooterCallback` in XML:
 
 .XML Configuration
 [source, xml, role="xmlContent"]
@@ -213,6 +226,10 @@ example:
     <property name="footerCallback" ref="footerCallback" />
 </bean>
 ----
+
+[role="javaContent"]
+The following example shows how to use the `FlatFileHeaderCallback` and the
+`FlatFileFooterCallback` in Java:
 
 .Java Configuration
 [source, java, role="javaContent"]
@@ -292,7 +309,10 @@ method, once we are guaranteed that no exceptions are thrown, that we update the
 
 In order for the `writeFooter` method to be called, the `TradeItemWriter` (which
 implements `FlatFileFooterCallback`) must be wired into the `FlatFileItemWriter` as the
-`footerCallback`. The following example shows how to do so:
+`footerCallback`.
+
+[role="xmlContent"]
+The following example shows how to wire the `TradeItemWriter` in XML:
 
 .XML Configuration
 [source, xml, role="xmlContent"]
@@ -307,6 +327,9 @@ implements `FlatFileFooterCallback`) must be wired into the `FlatFileItemWriter`
    <property name="footerCallback" ref="tradeItemWriter" />
 </bean>
 ----
+
+[role="javaContent"]
+The following example shows how to wire the `TradeItemWriter` in Java:
 
 .Java Configuration
 [source, java, role="javaContent"]
@@ -409,7 +432,10 @@ multi-line record as a group, so that it can be passed to the `ItemWriter` intac
 Because a single record spans multiple lines and because we may not know how many lines
 there are, the `ItemReader` must be careful to always read an entire record. In order to
 do this, a custom `ItemReader` should be implemented as a wrapper for the
-`FlatFileItemReader`, as shown in the following example:
+`FlatFileItemReader`.
+
+[role="xmlContent"]
+The following example shows how to implement a custom `ItemReader` in XML:
 
 .XML Configuration
 [source, xml, role="xmlContent"]
@@ -428,6 +454,9 @@ do this, a custom `ItemReader` should be implemented as a wrapper for the
     </property>
 </bean>
 ----
+
+[role="javaContent"]
+The following example shows how to implement a custom `ItemReader` in Java:
 
 .Java Configuration
 [source, java, role="javaContent"]
@@ -459,7 +488,10 @@ delegate `FlatFileItemReader`. See
 link:readersAndWriters.html#flatFileItemReader[`FlatFileItemReader` in the Readers and
 Writers chapter] for more details. The delegate reader then uses a
 `PassThroughFieldSetMapper` to deliver a `FieldSet` for each line back to the wrapping
-`ItemReader`, as shown in the following example:
+`ItemReader`.
+
+[role="xmlContent"]
+The following example shows how to ensure that each line is properly tokenized in XML:
 
 .XML Content
 [source, xml, role="xmlContent"]
@@ -475,6 +507,9 @@ Writers chapter] for more details. The delegate reader then uses a
     </property>
 </bean>
 ----
+
+[role="javaContent"]
+The following example shows how to ensure that each line is properly tokenized in Java:
 
 .Java Content
 [source, java, role="javaContent"]
@@ -545,7 +580,10 @@ common metadata about the run would be lost. Furthermore, a multi-step job would
 need to be split up into multiple jobs as well.
 
 Because the need is so common, Spring Batch provides a `Tasklet` implementation for
-calling system commands, as shown in the following example:
+calling system commands.
+
+[role="xmlContent"]
+The following example shows how to call an external command in XML:
 
 .XML Configuration
 [source, xml, role="xmlContent"]
@@ -556,6 +594,9 @@ calling system commands, as shown in the following example:
     <property name="timeout" value="5000" />
 </bean>
 ----
+
+[role="javaContent"]
+The following example shows how to call an external command in Java:
 
 .Java Configuration
 [source, java, role="javaContent"]
@@ -639,13 +680,16 @@ public class SavingItemWriter implements ItemWriter<Object> {
 }
 ----
 
-To make the data available to future `Steps`, it must be "promoted" to the `Job`
+To make the data available to future `Steps`, it must be "`promoted`" to the `Job`
 `ExecutionContext` after the step has finished. Spring Batch provides the
 `ExecutionContextPromotionListener` for this purpose. The listener must be configured
 with the keys related to the data in the `ExecutionContext` that must be promoted. It can
 also, optionally, be configured with a list of exit code patterns for which the promotion
 should occur (`COMPLETED` is the default). As with all listeners, it must be registered
-on the `Step` as shown in the following example:
+on the `Step`.
+
+[role="xmlContent"]
+The following example shows how to promote a step to the `Job` `ExecutionContext` in XML:
 
 .XML Configuration
 [source, xml, role="xmlContent"]
@@ -673,6 +717,9 @@ on the `Step` as shown in the following example:
     </beans:property>
 </beans:bean>
 ----
+
+[role="xmlContent"]
+The following example shows how to promote a step to the `Job` `ExecutionContext` in Java:
 
 .Java Configuration
 [source, java, role="javaContent"]
