--- a/spring-batch-docs/asciidoc/toggle.adoc
+++ b/spring-batch-docs/asciidoc/toggle.adoc
@@ -8,7 +8,7 @@ ifdef::backend-html5[]
   <div class="docToggle-button">
     <input id="xmlButton" type="radio" name="docToggle" value="XML"><label for="xmlButton">XML</label>
     <input id="javaButton" type="radio" name="docToggle" value="Java" checked><label for="javaButton">Java</label>
-    <!-- <input id="bothButton" type="radio" name="docToggle" value="Both" checked><label for="bothButton">Both</label> -->
+    <input id="bothButton" type="radio" name="docToggle" value="Both" checked><label for="bothButton">Both</label>
   </div>
 </div>
 +++
